# lxw-cli

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/lexware_cli/: __main__.py  cli.py  config.py  mcp_server.py  output.py
src/lexware_cli/commands/: _common.py  articles.py  contacts.py  delivery_notes.py  invoices.py  mcp.py  orders.py  quotations.py  vouchers.py
src/lexware_cli/core/: __init__.py  client.py  errors.py  services.py
src/lexware_cli/tui/: __init__.py  app.py  detail.py  entities.py  order_form.py
src/lxw_cli/: __init__.py  __main__.py  cli.py  config.py  feature_request.py  mcp_auth.py  mcp_server.py  output.py
src/lxw_cli/commands/: _common.py  articles.py  contacts.py  delivery_notes.py  invoices.py  mcp.py  orders.py  quotations.py  vouchers.py
src/lxw_cli/core/: __init__.py  client.py  constants.py  errors.py  models.py  services.py
src/lxw_cli/tui/: __init__.py  app.py  entities.py  order_form.py
tests/: conftest.py  test_cli.py  test_cli_snapshots.py  test_client.py  test_config.py  test_feature_request.py  test_mcp_auth.py  test_mcp_server.py  test_output.py  test_resolve.py  test_services.py  test_tui.py
tests/snapshots/: contacts_flat.txt  contacts_grouped.txt  invoices_list.txt
