[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexware-cli"
version = "0.1.0"
description = "Command-line tool for querying the Lexware Office API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Markus Oeffling" }]
keywords = ["lexware", "lexoffice", "cli", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "tenacity>=8.2",
    "rich>=13.7",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "fastmcp>=2.10",
    "textual>=0.58",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
lexware = "lexware_cli.cli:_run"
lexware-mcp = "lexware_cli.mcp_server:run"
lexware-tui = "lexware_cli.tui.app:run"

[project.urls]
Homepage = "https://developers.lexware.io/"

[tool.hatch.build.targets.wheel]
packages = ["src/lexware_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic API requires typer.Option/Argument calls in defaults
"src/lexware_cli/cli.py" = ["B008"]
"src/lexware_cli/commands/*.py" = ["B008"]
