[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lxw-cli"
version = "0.1.3"
description = "Inoffizielles CLI/TUI/MCP-Tool für die Lexware Office API (vormals lexoffice)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Markus Oeffling" }]
keywords = ["lexware", "lexoffice", "cli", "tui", "mcp", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "tenacity>=8.2",
    "rich>=13.7",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "fastmcp>=2.10",
    "textual>=0.58",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
lxw = "lxw_cli.cli:_run"
lxw-mcp = "lxw_cli.mcp_server:run"
lxw-tui = "lxw_cli.tui.app:run"

[project.urls]
Homepage = "https://github.com/OEM-Mrks/lxw-cli"
Documentation = "https://developers.lexware.io/"

[tool.hatch.build.targets.wheel]
packages = ["src/lxw_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic API requires typer.Option/Argument calls in defaults
"src/lxw_cli/cli.py" = ["B008"]
"src/lxw_cli/commands/*.py" = ["B008"]
